# iggy-thread-per-core-sandbox

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  shard.rs
server/src/command/: command.rs
server/src/commands/: command.rs
server/src/shard/: message.rs  mod.rs
server/src/shards/: message.rs  mod.rs  shard.rs
