[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
monoio = { version = "0.2.3", features = ["async-cancel", "sync", "signal", "tracing", "zero-copy", "bytes", "legacy", "macros", "utils", "io-uring", "iouring"] }
monoio-native-tls = {version = "0.3.0"}
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive", "rc"] }
sharded_queue = "2.0.1"
